# code-camera-link-arm-8-5-2026

./: README.md  points_joint.json  set_point.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dynamixel_hardware_interface/include/dynamixel_hardware_interface/: dynamixel_hardware_interface.hpp  visibility_control.h
install/dynamixel_hardware_interface/share/dynamixel_hardware_interface/: dynamixel_hardware_interface_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_interfaces/share/dynamixel_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk/include/dynamixel_easy_sdk/: connector.hpp  control_table.hpp  data_types.hpp  dynamixel_easy_sdk.hpp  dynamixel_error.hpp  group_executor.hpp  motor.hpp
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/open_manipulator/open_manipulator_x_playground/: CMakeLists.txt
src/open_manipulator/open_manipulator_x_playground/install/: local_setup.sh  setup.sh
src/open_manipulator/open_manipulator_x_playground/install/open_manipulator_x_playground/lib/open_manipulator_x_playground/: hello_moveit  main
src/open_manipulator/open_manipulator_x_playground/install/open_manipulator_x_playground/share/open_manipulator_x_playground/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/open_manipulator/open_manipulator_x_playground/install/open_manipulator_x_playground/share/open_manipulator_x_playground/cmake/: open_manipulator_x_playgroundConfig.cmake
src/open_manipulator/open_manipulator_x_playground/launch/: main_with_moveit.launch.py
src/open_manipulator/open_manipulator_x_playground/log/: latest_build
src/open_manipulator/open_manipulator_x_playground/src/: main.cpp  points.json
(+586 files in other folders)
